--- a/gv.html
+++ b/gv.html
@@ -12,10 +12,11 @@
 
     <grid-view allow-sorting="" allow-pagging="" allow-search="" page-size="10" gvdata-source="form.directory" empty-text="">
         <columns>
-            <column header-text="Name"  text="name | uppercase" ></column>
+            <column header-text="#" counter="true" sorteable="true"></column>
+            <column header-text="Name"  text="{{name | uppercase}}" null-text="{{'no hay valores' | uppercase}}"></column>
             <column header-text="Phone" data-field="phone"></column>
             <templateColumn>
-                <button class="btn btn-danger" ng-click="pruebame(name)">Pruebame</button>
+                <button class="btn btn-danger" ng-click="pruebame($parent.$parent.$index)">Pruebame</button>
             </templateColumn>
         </columns>
     </grid-view>
